# tic-tac-toe

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: release.yml  test.yml
tests/: conftest.py  test_game.py
tictactoe/: game.py  main.kv  main.py
