[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = "simple game"
authors = ["bjornaer <maxemijo@gmail.com>"]
packages = [
    {include="tictactoe"}
]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.0.0"
kivymd = "^0.104.2"
buildozer = "^1.2.0"
Pillow = "^9.0.1"
pyjnius = "^1.4.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^3.5.0"
pytest = "^7.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''
(
  /(
    \.mypy_cache
  )/
)
'''

[tool.isort]
profile = "black"
